crud motocicleta al 60%

--- a/ProyectoPracticaII/Client/Pages/Home.razor
+++ b/ProyectoPracticaII/Client/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿
 @page "/PaginaHome"
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -209,6 +210,11 @@
         </div>
     </div>
 
+
+
+
+    </div>
+
     <br />
     <br />
     <br />
@@ -216,18 +222,14 @@
 
     <br />
     <br />
+    <br/>
 
     <div class="Footer">
         <p> Motored &copy;. Todos los derechos reservados</p>
     </div>
-
-
-    </div>
-        
 </body>
 
 </html>
 
-@code {
+@code {}
 
-}
