Crud de motocicleta casi terminado - falta lo de login usuario

--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor
@@ -18,6 +18,7 @@
     <header>
         <section id="Menu">
             <ul>
+                <a href="/">Inicio</a>
                 <a href="#">Mi Perfil</a>
            
                 <a href="#">Mi Taller</a>
@@ -38,7 +39,7 @@
 
     <br />
     <div class="btnCentrado">
-        <a class="btnCrear" href="/PMotocicletas/CrearMoto"> Registrar nueva moto</a>
+        <a class="btnCrear" href="/PMotocicletas/CrearMoto"> REGISTRAR UNA NUEVA MOTO</a>
     </div>
    
     <div id="main-container">
@@ -96,19 +97,15 @@
         </table>
     </div>
 
-    <br/>
-
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
 
 
-</body>
-<div class="Footer">
+    <Footer>
     <p> Motored &copy;. Todos los derechos reservados</p>
-</div>
+    </Footer>
+</body>
+
+
+
 
 </html>
 
