--- a/ProyectoPracticaII/Client/Pages/Index.razor
+++ b/ProyectoPracticaII/Client/Pages/Index.razor
@@ -15,6 +15,8 @@
             margin: 0;
         }
 
+
+
         html, body {
             margin: 0;
             padding: 0;
@@ -65,7 +67,7 @@
                 #Menu ul a:hover {
                     color: #f2f2f2;
                     background: #bd0003;
-                    font-size: 20px;
+                    font-size: 18px;
                 }
 
         .container {
@@ -142,13 +144,19 @@
 
 
 
-        .Footer {
+        Footer {
             color: #bd0003;
             background-color: black;
             text-align: center;
-            height: 2rem 3px;
-            padding: 1rem;
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+            left: 0;
+            padding: 2rem 8%;
+            display: flex;
+            flex-direction: column;
         }
+
     </style>
 
 
@@ -214,18 +222,11 @@
 
     </div>
 
-    <br />
-    <br />
-    <br />
-    <br />
+    
 
-    <br />
-    <br />
-    <br />
-
-    <div class="Footer">
-        <p> Motored &copy;. Todos los derechos reservados</p>
-    </div>
+    <Footer>
+    <p> Motored &copy;. Todos los derechos reservados</p>
+    </Footer>
 </body>
 
 
