--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/CrearMoto.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/CrearMoto.razor
@@ -3,41 +3,102 @@
 @inject IHttpService http
 @inject NavigationManager NavigatorManager 
 
-<h1>Editar datos de moto</h1> 
 
-<EditForm Model="NuevaMotocicleta">
-    <label>IdUsuario</label>
-    <InputNumber @bind-Value=NuevaMotocicleta.IdUsuario>Marca</InputNumber>
-    <label>Marca</label>
-    <InputText @bind-Value=NuevaMotocicleta.Marca>Marca</InputText>
-    <label>Modelo</label>
-    <InputText @bind-Value=NuevaMotocicleta.Modelo>Modelo</InputText>
-    <label>Año</label>
-    <InputNumber @bind-Value=NuevaMotocicleta.Año>Año</InputNumber>
-    <label>Patente</label>
-    <InputText @bind-Value=NuevaMotocicleta.Patente>Patente</InputText>
-    <label>Aseguradora</label>
-    <InputText @bind-Value=NuevaMotocicleta.Aseguradora>Aseguradora</InputText>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <style>
+        html{
+            height: 100%;
+        }
+        html, body{
+
+            background-color: gray;
+            flex-direction:column; 
+            min-height:100%; 
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <section id="Menu">
+            <ul>
+                <a href="/">Inicio</a>
+                <a href="#">Mi Perfil</a>
+                <a href="PMotocicletas/ListaMotocicletas/"> Mis Motos</a>
+                <a href="#">Mi Taller</a>
+           
+            </ul>
+
+        </section>
+    </header>
+
+    <br />
+    <section class="form-moto">
+    <EditForm Model="NuevaMotocicleta">
+        
+            <h4> CARGAR DATOS DE TU MOTO</h4>
+            <label>IdUsuario</label>
+
+            <InputNumber @bind-Value=NuevaMotocicleta.IdUsuario style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> Marca</InputNumber>
+            <label>Marca</label>
+            <InputText class="controls" @bind-Value=NuevaMotocicleta.Marca style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">Marca</InputText>
+            <label>Modelo</label>
+            <InputText class="controls" @bind-Value=NuevaMotocicleta.Modelo style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003;; font-size:18px; color: white;">Modelo</InputText>
+            <label>Año</label>
+            <InputNumber class="controls" @bind-Value=NuevaMotocicleta.Año style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003;; font-size:18px; color: white;">Año</InputNumber>
+            <label>Patente</label>
+            <InputText class="controls" @bind-Value=NuevaMotocicleta.Patente style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003;; font-size:18px; color: white;">Patente</InputText>
+            <label>Aseguradora</label>
+            <InputText class="controls" @bind-Value=NuevaMotocicleta.Aseguradora style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003;; font-size:18px; color: white;">Aseguradora</InputText>
 
 
-    <button @onclick="(()=>CrearMotoU(NuevaMotocicleta))">Crear Motocicleta</button>
+            <button class="btnC" @onclick="(()=>CrearMotoU(NuevaMotocicleta))">Registrar motocicleta</button>
+   
 
 
+    </EditForm>
+    </section>
+    <br/>
+    <br/>
+    </body>
+        
+    <Footer>
+    <p> Motored &copy;. Todos los derechos reservados</p>
+    </Footer>
 
+</html>
 
-</EditForm>
 
 @code {
     Motocicleta NuevaMotocicleta = new Motocicleta();
     [Parameter] public int login { get; set; }
+
+
+
+
+   
     public async Task CrearMotoU(Motocicleta motocicleta)
     {
         var resultado = await http.Post<Motocicleta>("api/Motocicleta", NuevaMotocicleta);
         if (resultado.Error)
         {
             var body = resultado.HttpResponseMessage;
-            NavigatorManager.NavigateTo("/Productos");
+
         }
+        NavigatorManager.NavigateTo($"/PMotocicletas/ListaMotocicletas/{NuevaMotocicleta.IdUsuario}");
     }
+
+  
 
 }
