--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/FormMoto.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/FormMoto.razor
@@ -3,22 +3,72 @@
 @inject IHttpService Ihttp
 @inject NavigationManager NavigatorManager
 
-<EditForm Model="moto">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        html {
+            height: 100%;
+        }
 
-    <label>Marca</label>
-    <InputText @bind-Value=moto.Marca> </InputText>
-    <label>Modelo</label>
-    <InputText @bind-Value=moto.Modelo>Modelo</InputText>
-    <label>Año</label>
-    <InputNumber @bind-Value=moto.Año>Año</InputNumber>
-    <label>Patente</label>
-    <InputText @bind-Value=moto.Patente>Patente</InputText>
-    <label>Aseguradora</label>
-    <InputText @bind-Value=moto.Aseguradora>Aseguradora</InputText>
+        html, body {
+            background-color: gray;
+            flex-direction: column;
+            min-height: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <section id="Menu">
+            <ul>
+                <a href="/">Inicio</a>
+                <a href="#">Mi Perfil</a>
+                <a href="PMotocicletas/ListaMotocicletas/"> Mis Motos</a>
+                <a href="#">Mi Taller</a>
 
-    <button @onclick="(()=>ActualizarMoto(moto))">Actualizar</button>
-    <button class="btn btn-secondary" @onclick="onCancel"> Cancelar</button>
-</EditForm>
+            </ul>
+
+        </section>
+    </header>
+    <section class="form-moto">
+        <EditForm Model="moto">
+            <h4>ACTUALIZAR DATOS DE TU MOTO</h4>
+
+            <label>Marca</label>
+            <InputText @bind-Value=moto.Marca style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> </InputText>
+            <label>Modelo</label>
+            <InputText @bind-Value=moto.Modelo style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"> </InputText>
+            <label>Año</label>
+            <InputNumber @bind-Value=moto.Año style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">Año</InputNumber>
+            <label>Patente</label>
+            <InputText @bind-Value=moto.Patente style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">Patente</InputText>
+            <label>Aseguradora</label>
+            <InputText @bind-Value=moto.Aseguradora style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">Aseguradora</InputText>
+
+            <button class="btnC" @onclick="(()=>ActualizarMoto(moto))">Actualizar</button>
+            <button class="btnC" @onclick="onCancel"> Cancelar</button>
+        </EditForm>
+    </section>
+
+    <br/>
+    <br/>
+
+    
+</body>
+<Footer>
+    <p> Motored &copy;. Todos los derechos reservados</p>
+    </Footer>
+</html>
+
 @code {
 
     [Parameter] public Motocicleta moto { get; set; }
