Vista Lista Taller terminada Funcionando

--- a/ProyectoPracticaII/Client/Pages/Index.razor
+++ b/ProyectoPracticaII/Client/Pages/Index.razor
@@ -167,7 +167,7 @@
             <ul>
                 <a href="#">Mi Perfil</a>
                 <a href="/PMotocicletas/ListaMotocicletas/">Mis Motos</a>
-                <a href="#">Mi Taller</a>
+                <a href="/PTaller/ListaTaller/">Mi Taller</a>
                 <a href="#">Salir</a>
             </ul>
 
