--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor
@@ -21,7 +21,7 @@
                 <a href="/">Inicio</a>
                 <a href="#">Mi Perfil</a>
            
-                <a href="#">Mi Taller</a>
+                <a href="PTaller/ListaTaller/">Mi Taller</a>
                 <a href="#">Salir</a>
             </ul>
 
