--- a/ProyectoPracticaII/Client/Pages/Home.razor
+++ b/ProyectoPracticaII/Client/Pages/Home.razor
@@ -1,44 +1,43 @@
-﻿
-@page "/PaginaHome"
-
+﻿@page "/Home"
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Motored</title>
-  
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="base.css" rel="stylesheet"/>
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <title>Document</title>
     <style>
-        * {
-            padding: 0;
-            margin: 0;
+        html {
+            height: 100%;
         }
 
         html, body {
+            display: flex;
+            background-color: gray;
+            flex-direction: column;
+            min-height: 100%;
+        
+        }
+
+        * {
             margin: 0;
             padding: 0;
-            background-color: #404040;
+            box-sizing: border-box;
         }
 
-        body {
-            width: 100%;
+        html {
             height: 100%;
-            font-family: sans-serif;
-            letter-spacing: 0.03em;
-            line-height: 1.6;
-            font-family: 'Open Sans', sans-serif;
         }
 
-        .title {
-            text-align: center;
-            font-size: 40px;
-            color: #6a6a6a;
-            margin-top: 100px;
-            font-weight: 100;
-            font-family: 'Roboto', sans-serif;
+        html, bo
+
+        html {
+            height: 100%;
+        }
+
+        html, body {
         }
 
         header {
@@ -70,166 +69,38 @@
                     font-size: 20px;
                 }
 
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            height: 430px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin: auto;
-        }
-
-            .container .card {
-                background-color: black;
-                width: 330px;
-                height: 430px;
-                border-radius: 8px;
-                /*box-shadow: 5px 5px 5px 5px rgba(248, 9, 9, 0.842);*/
-                box-shadow: 0 0 1px #bd0003,0 0 10px #bd0003, 0 0 15px #bd0003, 0 0 20px #bd0003;
-                overflow: hidden;
-                margin: 20px;
-                text-align: center;
-                transition: all 0.25s;
-            }
-
-                .container .card:hover {
-                    transform: translateY(-15px);
-                    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-                }
-
-                .container .card img {
-                    width: 330px;
-                    height: 220px;
-                }
-
-
-                .container .card h4 {
-                    font-weight: 600;
-                    color: #f2f2f2;
-                }
-
-                .container .card p {
-                    padding: 0 1rem;
-                    font-size: 16px;
-                    font-weight: 300;
-                    color: #f2f2f2;
-                }
-
-                .container .card a {
-                    font-weight: 500;
-                    text-decoration: none;
-                    color: #3498db;
-                }
-
-        .boton-2 {
-            display: block;
-        }
-
-        .btn-2 {
-            text-decoration: none;
-            background-color: #bd0003;
-            color: rgb(255, 255, 255);
-            padding: 10px 20px;
-            border-radius: 20px;
-            transition: all .3s ease;
-            justify-content: center;
-        }
-
-            .btn-2:hover {
-                background-color: #bd0003;
-                color: white;
-                box-shadow: 0 0 5px #bd0003,0 0 20px #bd0003, 0 0 60px #bd0003, 0 0 150px #bd0003;
-            }
-
-
-
-        .Footer {
+        Footer {
+      
             color: #bd0003;
             background-color: black;
             text-align: center;
-            height: 2rem 3px;
-            padding: 1rem;
+            width: 100%;
+            bottom: 0;
+            left: 0;
+            padding: 2rem 8%;
+            margin-top: auto;
         }
     </style>
-
-
 </head>
 <body>
     <header>
         <section id="Menu">
             <ul>
                 <a href="#">Mi Perfil</a>
-                <a href="#">Mi Taller</a>
+                <a href="/PMotocicletas/ListaMotocicletas/">Mis Motos</a>
+                <a href="/PTaller/ListaTaller/">Mi Taller</a>
                 <a href="#">Salir</a>
             </ul>
 
         </section>
     </header>
-
-    <br />
-    <br />
-
-    <div class="container">
-        <div class="card">
-        <img src="https://img.freepik.com/fotos-premium/imagen-es-cerca-gente-reparando-motocicleta-utilice-llave-destornillador-trabajar_39733-575.jpg">
-        <h4>Taller cerca</h4>
-        <br />
-        <p>
-            Encuentra mecanicos cerca de tu ubicación en tiempo real
-        </p>
-
-        <div class="boton-2">
-
-            <input type="button" name="submit" class="btn-2" value="Encontrar talleres" />
-        </div>
-    </div>
-
-    <div class="card">
-        <img src="https://motosprint.com/media/wysiwyg/andorra/Nuestra-tienda-Motosprint-02.jpg">
-        <h4>Tiendas/Gomería cerca</h4>
-        <br />
-        <p>Encuentra gomerías y tiendas de repuestos cerca de ti con nuestro sistema geolocalizador</p>
-
-        <div class="boton-2">
-
-            <input type="button" name="submit" class="btn-2" value="Ir buscar Tiendas/Gomerías" />
-        </div>
-        <br />
-    </div>
-
-    <div class="card">
-        <img src="https://motor.elpais.com/wp-content/uploads/2022/11/Apertura-motos-mas-rapidas-mundo-1440x740.jpg">
-        <h4>Taller top</h4>
-        <br />
-        <p>Aquí encontraras los talleres top de tu ciudad</p>
-
-        <div class="boton-2">
-
-            <input type="button" name="submit" class="btn-2" value="Ir ranking de Talleres">
-        </div>
-    </div>
-
-
-
-
-    </div>
-
-    <br />
-    <br />
-    <br />
-    <br />
-
-    <br />
-    <br />
     <br/>
 
-    <div class="Footer">
+    <Footer>
         <p> Motored &copy;. Todos los derechos reservados</p>
-    </div>
+        </Footer>
+
 </body>
 
+
 </html>
-
-@code {}
-
