--- a/ProyectoPracticaII/Client/Pages/Index.razor
+++ b/ProyectoPracticaII/Client/Pages/Index.razor
@@ -119,7 +119,7 @@
                 .container .card a {
                     font-weight: 500;
                     text-decoration: none;
-                    color: #3498db;
+                    color: white;
                 }
 
         .boton-2 {
@@ -128,8 +128,9 @@
 
         .btn-2 {
             text-decoration: none;
+            color: white;
             background-color: #bd0003;
-            color: rgb(255, 255, 255);
+       
             padding: 10px 20px;
             border-radius: 20px;
             transition: all .3s ease;
@@ -188,7 +189,7 @@
 
             <div class="boton-2">
 
-                <input type="button" name="submit" class="btn-2" value="Encontrar talleres" />
+                <a class="btn-2" href="/PBTaller/BuscarTaller"> Buscar Taller</a>
             </div>
         </div>
 
@@ -224,11 +225,11 @@
 
     
 
-    <Footer>
+ 
+</body>
+   <Footer>
     <p> Motored &copy;. Todos los derechos reservados</p>
     </Footer>
-</body>
-
 
 </html>
 
