Buscar tiendas y gomerías

--- a/ProyectoPracticaII/Client/Pages/Index.razor
+++ b/ProyectoPracticaII/Client/Pages/Index.razor
@@ -201,7 +201,7 @@
 
             <div class="boton-2">
 
-                <input type="button" name="submit" class="btn-2" value="Ir buscar Tiendas/Gomerías" />
+                <a class="btn-2" href="/PTienda/BTiendas"> Buscar</a>
             </div>
             <br />
         </div>
