--- a/ProyectoPracticaII/Client/Pages/PBTaller/BuscarTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PBTaller/BuscarTaller.razor
@@ -47,7 +47,9 @@
 
     <iframe src="https://www.google.com/maps/d/embed?mid=1bMEqTnZfVN6LxPWMgR7lwE8r61wozTM&ehbc=2E312F&noprof=1" width="100%" height="500"></iframe>
     <div class="form-moto">
-        <input type="text" @bind="nombreTaller" class="form-moto" placeholder="Nombre del Taller">
+        <h4> Buscar Taller </h4>
+        <input type="text" @bind="nombreTaller" class="form-moto" placeholder="Nombre del Taller" style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;">
         <button class="btnC" @onclick="BuscarTalleres">Buscar</button>
     </div>
     <br />
