--- a/ProyectoPracticaII/Client/Pages/PTaller/ListaTaller.razor.css
+++ b/ProyectoPracticaII/Client/Pages/PTaller/ListaTaller.razor.css
@@ -129,14 +129,18 @@ Footer {
     flex-direction: column;
 }
 .modal-content {
+    background-color: black;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 50%;
+    width: 25%;
+    text-align: center; 
+    border-radius: 10px;
 }
-.modal-title {
-    text-align: center;
+
+.modal-content h5{
+    color: red;
 }
 
 .modal-header {
@@ -144,11 +148,12 @@ Footer {
     
 }
 
-.modal-header h5{
-    text-align: center;
-    color: red;
-}
+
 
 .modal-footer{
     background-color: black;
+}
+
+.btn-danger{
+   background-color: red;
 }
