Login y registro andando

--- a/ProyectoPracticaII/Client/Pages/Registro.razor
+++ b/ProyectoPracticaII/Client/Pages/Registro.razor
@@ -1,5 +1,8 @@
 ﻿@page "/registro"
-
+@using ProyectoPracticaII.Client.Models;
+@inject HttpClient http
+@inject IHttpService Ihttp
+@inject NavigationManager NavigatorManager
 <html>
 <head>
     <meta charset="utf-8" />
@@ -10,64 +13,47 @@
 
     <style>
 
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #404040;
-            height: 100vh;
-            color: white;
+        <style >
+        html {
+            height: 100%;
         }
+
+        html, body {
+            background-color: gray;
+            flex-direction: column;
+            min-height: 100%;
+        }
+    </style>
 
     </style>
 
 </head>
 <body>
-    <div id="login">
-        <h3 class="text-center text-white pt-5">Motored</h3>
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" asp-controller="Inicio" asp-action="Registrarse" method="post">
-                            <h3 class="text-center text-info">Login</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">Usuario</label><br>
-                                <input type="text" name="NombreUsuario" required class="form-control" placeholder="Juan27">
-                            </div>
-                            <div class="form-group">
-                                <label for="username" class="text-info">Correo</label><br>
-                                <input type="text" name="correo" required class="form-control" placeholder="juan27@email.com">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Contraseña</label><br>
-                                <input type="password" name="clave" required class="form-control" placeholder="juan1234">
-                            </div>
+    <h1 style="text-align:center">Motored</h1>
+  
+    <Section class="Form-Registro">
+        <h4> Registrarse</h4>
+        <EditForm Model="NuevoUsuario">
+            <label>Nombre</label>
+            <InputText @bind-Value=NuevoUsuario.NombreUsuario style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
+            <label>Correo</label>
+            <InputText @bind-Value=NuevoUsuario.Correo style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;" ></InputText>
+            <label>Clave</label>
+            <InputText @bind-Value=NuevoUsuario.Clave style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
 
 
-@*                             @if (ViewData["Mensaje"] != null)
-                            {
-                                <div class="alert alert-danger" role="alert">
 
-                                    @ViewData["Mensaje"]
-                                </div>
-
-                            } *@
+            <button class="btnC" @onclick="(()=>CrearUsuario(NuevoUsuario))">Crear Usuario</button>
 
 
-                            <div class="boton-2">
-                                <label for="remember-me" class="text-info"><span></span></label><br>
-                                <input type="submit" name="submit" class="btn-2" value="Registrarse">
-                            </div>
-                            <div id="register-link" class="text-right">
-                                <a href="/login" class="text-info">Iniciar sesion</a>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
+
+        </EditForm>
+    </Section>
+    
     <br />
     <br />
     <br />
@@ -82,5 +68,16 @@
 </html>
 
 @code {
+    Usuario NuevoUsuario = new Usuario();
 
+    public async Task CrearUsuario(Usuario usuario)
+    {
+        var resultado = await Ihttp.Post<Usuario>("api/Registro", NuevoUsuario);
+        if (resultado.Error)
+        {
+            var body = resultado.HttpResponseMessage;
+
+        }
+        NavigatorManager.NavigateTo("/");
+    }
 }
