--- a/ProyectoPracticaII/Client/Pages/Login.razor
+++ b/ProyectoPracticaII/Client/Pages/Login.razor
@@ -1,4 +1,8 @@
 ﻿@page "/login"
+@using ProyectoPracticaII.Client.Models;
+@inject HttpClient http
+@inject IHttpService Ihttp
+@inject NavigationManager NavigatorManager
 
 
 
@@ -12,60 +16,49 @@
     <link href="css/Login.css" rel="stylesheet" />
     @*<link href="MOTORED2.Client.styles.css" rel="stylesheet" />*@
     @* <link href="Views/Inicio/Registrarse.css" rel="stylesheet" />*@
-    <style>
+    
 
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #404040;
-            height: 100vh;
-            color: white;
+        <style >
+        html {
+            height: 100%;
         }
 
+        html, body {
+            background-color: gray;
+            flex-direction: column;
+            min-height: 100%;
+        }
     </style>
+
+    
 
 </head>
 
 
 <body>
-    <div id="login">
-        <h3 class="text-center text-white pt-5">Motored</h3>
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" asp-controller="Inicio" asp-action="IniciarSesion" method="post">
-                            <h3 class="text-center text-info">Login</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">Correo</label><br>
-                                <input type="text" required name="correo" id="correo" class="form-control" placeholder="Correo">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Contraseña</label><br>
-                                <input type="password" required name="clave" id="clave" class="form-control" placeholder="Contraseña">
-                            </div>
+      <h1 style="text-align:center">Motored</h1>
+  
+    <Section class="Form-Registro">
+        <h4> Login</h4>
+        <EditForm Model="NuevoUsuario">
+          
 
-                            @* @if (ViewData["Mensaje"] != null)
-                            {
-                                <div class="alert alert-danger" role="alert">
+            <label>Correo</label>
+            <InputText @bind-Value=NuevoUsuario.Correo style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
+            <label>Clave</label>
+            <InputText @bind-Value=NuevoUsuario.Clave style=" width: 100%;
+    background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
 
-                                    @ViewData["Mensaje"]
-                                </div>
-                                
-                            } *@
-                            <div class="boton-2">
-                                <label for="remember-me" class="text-info"><span>Recordar usuario</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                <input type="submit" name="submit" class="btn-2" value="Iniciar sesion">
-                            </div>
-                            <div id="register-link" class="text-right">
-                                <a href="/registro" class="text-info">Registrarse</a>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
+            <button class="btnC" @onclick="(()=>CrearUsuario(NuevoUsuario))">Entrar</button>
+
+
+
+
+        </EditForm>
+    </Section>
     <br />
     <br />
     <br />
@@ -85,5 +78,18 @@
 
 
 @code {
+    Usuario NuevoUsuario = new Usuario();
+
+    public async Task CrearUsuario(Usuario usuario)
+    {
+        var resultado = await Ihttp.Post<Usuario>("api/Logueo", NuevoUsuario);
+        if (resultado.Error)
+        {
+            var body = resultado.HttpResponseMessage;
+
+        }
+        NavigatorManager.NavigateTo("/");
+    }
+
 
 }
