--- a/ProyectoPracticaII/Client/Pages/Login.razor.css
+++ b/ProyectoPracticaII/Client/Pages/Login.razor.css
@@ -1,64 +1,86 @@
-﻿body {
+﻿* {
     margin: 0;
     padding: 0;
-    background-color: #404040;
-    height: 100vh;
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+}
+
+html, body {
+}
+
+header {
+    width: 100%;
+    height: 50px;
+    box-shadow: 1px 1px 5px #bd0003;
+    background-color: #000;
+}
+
+#Menu {
+    width: 450px;
+    padding-top: 13px;
+    margin: auto;
+    text-align: center;
+}
+
+    #Menu ul a {
+        color: #ffff;
+        text-decoration: none;
+        font: 16px Roboto;
+        padding: 13px 20px 20px 20px;
+        border-radius: 30px;
+    }
+
+
+        #Menu ul a:hover {
+            color: #f2f2f2;
+            background: #bd0003;
+            font-size: 20px;
+        }
+
+h1 {
+    text-align: center;
+}
+
+.Form-Registro {
+    width: 600px;
+    background: black;
+    padding: 30px;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 4px;
+    font-family: 'calibri';
     color: white;
-    background-color: red;
-}
-
-.text-white {
-    color: black !important;
-}
-
-#login .container #login-row #login-column #login-box #login-form {
-    margin-top: 120px;
-    max-width: 600px;
-    height: 430px;
-    border: 5px solid #515151;
-    background-color: black;
-    border-radius: 25px;
-}
-
-.text-info {
-    color: #bd0003 !important;
-}
-
-.boton-2 {
+    box-shadow: 7px 13px 37px #000;
     display: block;
 }
 
-.btn-2 {
-    text-decoration: none;
-    background-color: #bd0003;
+    .Form-Registro h4 {
+        font-size: 22px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+.btnC {
+    width: 100%;
+    background: #bd0003;
+    border: none;
+    padding: 12px;
     color: white;
-    padding: 10px 20px;
-    border-radius: 20px;
-    transition: all .3s ease;
-    justify-content: center;
-}
-
-    .btn-2:hover {
-        background-color: #bd0003;
-        color: white;
-        box-shadow: 0 0 5px #bd0003,0 0 20px #bd0003, 0 0 60px #bd0003, 0 0 150px #bd0003;
-    }
-
-#login .container #login-row #login-column #login-box #login-form {
-    padding: 20px;
+    margin: 16px 0;
+    font-size: 16px;
 }
 
 
-
-    #login .container #login-row #login-column #login-box #login-form #register-link {
-        margin-top: -85px;
-    }
-
-
-footer {
+Footer {
     color: #bd0003;
     background-color: black;
     text-align: center;
-    height: 2rem 3px;
-    padding: 1rem;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    padding: 2rem 8%;
+    margin-top: auto;
 }
