--- a/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor.css
+++ b/ProyectoPracticaII/Client/Pages/PMotocicletas/ListaMotocicletas.razor.css
@@ -115,6 +115,32 @@ tr:hover {
         box-shadow: 0 0 5px #bd0003,0 0 20px #bd0003, 0 0 60px #bd0003, 0 0 150px #bd0003;
     }
 
+
+.modal-content {
+    background-color: black;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 25%;
+    text-align: center;
+    border-radius: 10px;
+}
+
+    .modal-content h5 {
+        color: red;
+    }
+
+.modal-header {
+    background-color: black;
+}
+
+
+
+.modal-footer {
+    background-color: black;
+}
+
 Footer {
     color: #bd0003;
     background-color: black;
