Vista principal lista

--- a/ProyectoPracticaII/Client/Pages/Login.razor
+++ b/ProyectoPracticaII/Client/Pages/Login.razor
@@ -88,7 +88,7 @@
             var body = resultado.HttpResponseMessage;
 
         }
-        NavigatorManager.NavigateTo("/");
+        NavigatorManager.NavigateTo("/Inicio");
     }
 
 
