--- a/ProyectoPracticaII/Client/Pages/PTaller/ListaTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PTaller/ListaTaller.razor
@@ -20,7 +20,7 @@
     <header>
         <section id="Menu">
             <ul>
-                <a href="/">Inicio</a>
+                <a href="/Inicio">Inicio</a>
                 <a href="#">Mi Perfil</a>
                 <a href="PMotocicletas/ListaMotocicletas/">Mis Motos</a>
                 <a href="#">Salir</a>
