--- a/ProyectoPracticaII/Client/Pages/PTaller/CrearT.razor
+++ b/ProyectoPracticaII/Client/Pages/PTaller/CrearT.razor
@@ -25,7 +25,7 @@
     <header>
         <section id="Menu">
             <ul>
-                <a href="/">Inicio</a>
+                <a href="/Inicio">Inicio</a>
                 <a href="#">Mi Perfil</a>
                 <a href="PTaller/ListaTaller/"> Mi Taller</a>
                   <a href="PMotocicletas/ListaMotocicletas/">Mis Motos</a>
