--- a/ProyectoPracticaII/Client/Pages/PTaller/FormTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PTaller/FormTaller.razor
@@ -28,7 +28,7 @@
     <header>
         <section id="Menu">
             <ul>
-                <a href="/">Inicio</a>
+                <a href="/Inicio">Inicio</a>
                 <a href="#">Mi Perfil</a>
                 <a href="PMotocicletas/ListaMotocicletas/"> Mis Motos</a>
                 <a href="#">Mi Taller</a>
