--- a/ProyectoPracticaII/Client/Pages/Login.razor
+++ b/ProyectoPracticaII/Client/Pages/Login.razor
@@ -1,8 +1,16 @@
 ﻿@page "/login"
 @using ProyectoPracticaII.Client.Models;
 @inject HttpClient http
+
 @inject IHttpService Ihttp
 @inject NavigationManager NavigatorManager
+@using ProyectoPracticaII.Client.extensiones; 
+@using ProyectoPracticaII.Shared; 
+@using Microsoft.AspNetCore.Components.Authorization; 
+@inject AuthenticationStateProvider autenticacionProvider; 
+
+
+
 
 
 
@@ -40,19 +48,19 @@
   
     <Section class="Form-Registro">
         <h4> Login</h4>
-        <EditForm Model="NuevoUsuario">
+        <EditForm Model="login">
           
 
             <label>Correo</label>
-            <InputText @bind-Value=NuevoUsuario.Correo style=" width: 100%;
+            <InputText @bind-Value=login.Correo style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
             <label>Clave</label>
-            <InputText @bind-Value=NuevoUsuario.Clave style=" width: 100%;
+            <InputText @bind-Value=login.Clave type="password" style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
 
 
 
-            <button class="btnC" @onclick="(()=>CrearUsuario(NuevoUsuario))">Entrar</button>
+            <button class="btnC" @onclick="IniciarSesion">Entrar</button>
 
 
 
@@ -80,16 +88,41 @@
 @code {
     Usuario NuevoUsuario = new Usuario();
 
-    public async Task CrearUsuario(Usuario usuario)
-    {
-        var resultado = await Ihttp.Post<Usuario>("api/Logueo", NuevoUsuario);
-        if (resultado.Error)
-        {
-            var body = resultado.HttpResponseMessage;
+    private LoginDTO login = new LoginDTO(); 
 
+
+    private async Task IniciarSesion()
+    {
+        var loginResponse = await http.PostAsJsonAsync<LoginDTO>("/api/Logueo/Login", login);
+        if (loginResponse.IsSuccessStatusCode)
+        {
+            var sesionUsuario = await loginResponse.Content.ReadFromJsonAsync<SesionDTO>();
+            var autenticacionExt = (AutenticacionExtension)autenticacionProvider;
+            await autenticacionExt.ActualizarEstadoAutenticacion(sesionUsuario); 
+
+            NavigatorManager.NavigateTo("/Inicio"); 
         }
-        NavigatorManager.NavigateTo("/Inicio");
     }
+
+
+    //public async Task CrearUsuario(Usuario usuario)
+    //{
+    //    var resultado = await Ihttp.Post<Usuario>("api/Logueo/", usuario);
+    //    if (resultado.Error)
+    //    {
+    //        var body = resultado.HttpResponseMessage;
+
+    //        Console.WriteLine("Usuario no logueado");
+
+    //    }
+    //    else
+    //    {
+    //        NavigatorManager.NavigateTo("/Inicio");
+    //        Console.WriteLine("Usuario no logueado");
+    //    }
+
+        
+    //}
 
 
 }
