--- a/ProyectoPracticaII/Client/Pages/Registro.razor
+++ b/ProyectoPracticaII/Client/Pages/Registro.razor
@@ -41,7 +41,7 @@
             <InputText @bind-Value=NuevoUsuario.Correo style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;" ></InputText>
             <label>Clave</label>
-            <InputText @bind-Value=NuevoUsuario.Clave style=" width: 100%;
+            <InputText @bind-Value=NuevoUsuario.Clave type="password" style=" width: 100%;
     background: #000; padding:10px; border-radius:4px; margin-bottom: 16px; border: 1px solid #bd0003; font-size:18px; color: white;"></InputText>
 
 
