Agregar: Controller nueva opinion,Controller ReporteOpinion, Vistas, nuevaOpinion, lista de opiniones, Reporte de opinion

--- a/ProyectoPracticaII/Client/Pages/PBTaller/BuscarTaller.razor
+++ b/ProyectoPracticaII/Client/Pages/PBTaller/BuscarTaller.razor
@@ -71,8 +71,7 @@
             {
 
 
-
-
+                
                 <tr>
 
                     <td>@tallerEncontrado.NombreTaller</td>
@@ -89,9 +88,12 @@
                             </button>
                         </td>*@
 
+                    <td><a href="/opinion/{login:int}/{taller:int}">Dar Opinion</a></td>
+                    <td><a href="/veropinion">Ver reseñas de otros usuarios</a></td>
+                
 
+                
                 </tr>
-
 
             }
             else if (NoEncontrado != null)
