--- a/ProyectoPracticaII/Client/Pages/PBTaller/VerOpinion.razor
+++ b/ProyectoPracticaII/Client/Pages/PBTaller/VerOpinion.razor
@@ -1,5 +1,8 @@
-﻿@page "/verOpinion/{taller:int}"
+﻿@page "/verOpinion/{taller:int}/{login:int}"
 @using ProyectoPracticaII.Client.Models;
+
+
+
 @inject IHttpService http
 @inject NavigationManager NavigatorManager
 
@@ -17,26 +20,42 @@ else
 {
     @foreach (var item in opiniones)
     {
-        <tr>
-
+       
+            <td>@item.IdUsuario</td>
             <td>@item.Fecha</td>
             <td>@item.Comentario</td>
             <td>@item.Rating</td>
-           
-           
+            <td>editar</td>
+        
+      
 
 
 
-        </tr>
+
+
+
+
+
+
+
     }
+   
 }
+
+
+
+
+
 
 
 @code {
     [Parameter] public int taller { get; set; }
     [Parameter] public int login { get; set; }
     List<Opinione> opiniones;
-    
+    List<Usuario> usuarios;
+    List<(Opinione, Usuario)> ListaCombinada;
+    List<Taller> tallerr;
+
    
 
 
@@ -56,4 +75,12 @@ else
             opiniones = respuesta.Respuesta;
         }
     }
+
+    
+    
+   
+
+
+   
+
 }
